# WIRE

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  implementation_plan.md.resolved  pyproject.toml  requirements.txt  task.md
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml
docs/: REVERSE_ENGINEERING.md  REVIEW_GUIDE.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/tests/: App.test.tsx  Dashboard.test.tsx
migrations/: env.py
migrations/versions/: a41f9c3b7d02_add_project_run_id.py  c7e5d19f4a88_refresh_tokens_and_job_claims.py  cd229e892403_initial_schema_users_projects_templates.py  cfc8461062df_add_reconstruction_jobs_table.py
scripts/: audit_conformity.py
tests/: conftest.py  test_css_fidelity.py  test_interaction_fidelity.py  test_performance.py  test_phase4.py  test_phase6.py  test_phase7_llm_integration.py  test_phase7a_general.py  test_phase7b_portfolio_profile.py  test_phase8.py  test_phase9.py
tests/e2e/: test_behavioral_deep.py  test_behavioral_extractor.py  test_comprehensive_extractor.py  test_mock_pipeline.py  test_pipeline_local.py  test_stealth_auth.py
tests/fixtures/: fidelity_target.html  interaction_target.html  shadow_target.html  vue-compiler.js
tests/integration/: test_api.py  test_api_coverage.py  test_api_flows.py  test_phase_a_security.py  test_phase_b_api.py  test_router_substitution_coverage.py
tests/unit/: test_abuse_legal.py  test_adapter_style_parity.py  test_adapters.py  test_asset_clone_completeness.py  test_asset_coverage_extended.py  test_asset_downloader_coverage.py  test_asset_network_resilience.py  test_behavioral_delta.py  test_behavioral_error_paths.py  test_brand_transfer.py  test_breakpoint_visual_validation.py  test_cascade_denylist.py  test_clone_edge_cases.py  test_computed_style_capture.py  test_consensus.py  test_corpus_runner.py  test_coverage_assets_validation.py  test_coverage_misc.py  test_coverage_orchestrator.py  test_coverage_service_cli.py  test_coverage_storage.py  test_crawler.py  test_css_import_localization.py  test_dark_scheme_capture.py  test_design_analyzer.py  test_design_analyzer_coverage.py  test_document_ingestion.py  test_fidelity_scorer.py  test_final_coverage.py  test_font_path_parity.py  test_html_dedup.py  test_html_document.py  test_icon_detection.py  test_ingestion_coverage.py  test_input_blueprint_coverage.py  test_interactivity_transformer.py  test_job_queue.py  test_layout_coverage.py  test_layout_safety.py  test_lazy_scroll.py  (+30 more)
wire/: __main__.py  main.py  service.py  worker.py
wire/api/: __init__.py  auth.py  auth_routes.py  database.py  job_queue.py  main.py  main_routes.py  metrics.py  models.py  quota.py  rate_limit.py
wire/compilers/: __init__.py  html_compiler.py  react_adapter.py  sanitizer.py  style_emission.py  vue_adapter.py
wire/evaluation/: CORPUS_BASELINE.md  corpus_runner.py  layout_safety.py  repurpose_harness.py
wire/generation/: document_ingestion.py  image_ingestion.py  media_ingestion.py  submission_validator.py  substitution_mapper.py  transformation_prompt_generator.py
(+78 files in other folders)
