[project]
name = "wire"
version = "0.1.0"
description = "Semantic Web Reconstructor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.42.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.7.0",
    "redis>=5.0.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.20.0",
    "email-validator>=2.1.1",
    "tinycss2>=1.2.1",
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "google-genai>=1.0.0"
]

[project.scripts]
wire = "wire.main:main"

[project.optional-dependencies]
# PDF text extraction for document ingestion. Optional: without it, PDFs are
# still accepted and stored, only their text is not extracted.
documents = [
    "pypdf>=4.0.0",
]
# PostgreSQL driver for production deployments. SQLite (via aiosqlite, already a
# core dep) remains the zero-config default; set DATABASE_URL to a
# postgresql+asyncpg://… URL to use Postgres.
postgres = [
    "asyncpg>=0.29.0",
]
# Error reporting. Sentry is initialized only when SENTRY_DSN is set; without
# this extra (or the env var) the app runs unchanged. Metrics need no extra —
# /api/metrics exposes in-process counters in Prometheus format.
observability = [
    "sentry-sdk>=2.0.0",
]
# Object-storage sync for run durability/DR. When WIRE_S3_BUCKET is set,
# completed runs are mirrored to an S3-compatible bucket; without this extra
# (or the env var) the pipeline runs unchanged against local disk.
objectstore = [
    "boto3>=1.34.0",
]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.4",
    "black>=24.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
# Black owns line wrapping; E501 fires on long strings/URLs/comments it can't
# split, so defer line length to Black rather than double-reporting it.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# canonical.py intentionally defines the Pydantic models before importing the
# compiler sanitizer to avoid a circular import at module load.
"wire/schema/canonical.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Third-party packages that ship no type information; treat their symbols as
# Any rather than erroring on every import/use.
[[tool.mypy.overrides]]
module = [
    "jose",
    "pypdf",
    "tinycss2",
    "sse_starlette",
    "sse_starlette.*",
    "google.genai",
    "google.genai.*",
    "sentry_sdk",
    "boto3",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live_llm: marks tests requiring a live Gemini API key (run with '-m live_llm')",
]
